@@ -220,40 +220,19 @@ class WorkflowTransition {
     $entity = $this->getEntity(); // Entity may not be loaded, yet.
     $field_name = $this->field_name;
 
-    if ($old_sid == $new_sid) {
-      // Stop if not going to a different state.
-      // Write comment into history though.
-      if ($this->comment) {
-        $this->stamp = REQUEST_TIME;
+    // Check if the state has changed. If not, we only record the comment.
+    $state_changed = ($old_sid != $new_sid);
 
-        if (!$field_name) { // @todo D8: remove; this is only for Node API.
-          $entity->workflow_stamp = REQUEST_TIME;
-          workflow_update_workflow_node_stamp($entity_id, $this->stamp);
+    if ($state_changed) {
+      // State has changed. Do some checks upfront.
+      if (!$force) {
+        // Make sure this transition is allowed.
+        $result = module_invoke_all('workflow', 'transition permitted', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
+        // Did anybody veto this choice?
+        if (in_array(FALSE, $result)) {
+          // If vetoed, quit.
+          return $old_sid;
         }
-        $result = module_invoke_all('workflow', 'transition pre', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
-
-        $this->save();
-
-        if (!$field_name) { // @todo D8: remove; this is only for Node API.
-          unset($entity->workflow_comment); // @todo D8: remove; this line is only for Node API.
-        }
-        $result = module_invoke_all('workflow', 'transition post', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
-      }
-
-      // Clear any references in the scheduled listing.
-      foreach (WorkflowScheduledTransition::load($entity_type, $entity_id, $field_name) as $scheduled_transition) {
-        $scheduled_transition->delete();
-      }
-      return $new_sid;
-    }
-
-    if (!$force) {
-      // Make sure this transition is allowed.
-      $result = module_invoke_all('workflow', 'transition permitted', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
-      // Did anybody veto this choice?
-      if (in_array(FALSE, $result)) {
-        // If vetoed, quit.
-        return $old_sid;
       }
     }
 
@@ -268,56 +247,69 @@ class WorkflowTransition {
     );
     drupal_alter('workflow_comment', $this->comment, $context);
 
+    if (!$state_changed && $this->comment) {
+      // Stop if not going to a different state.
+      // Write comment into history though.
+      $this->stamp = REQUEST_TIME;
 
-    $args = array(
-      '%user' => $user->name,
-      '%old' => $old_sid,
-      '%new' => $new_sid,
-    );
-    $transition = workflow_get_workflow_transitions_by_sid_target_sid($old_sid, $new_sid);
-    if (!$transition && !$force) {
-      watchdog('workflow', 'Attempt to go to nonexistent transition (from %old to %new)', $args, WATCHDOG_ERROR);
-      return $old_sid;
+      if (!$field_name) { // @todo D8: remove; this is only for Node API.
+        $entity->workflow_stamp = REQUEST_TIME;
+        workflow_update_workflow_node_stamp($entity_id, $this->stamp);
+      }
     }
 
     // Make sure this transition is valid and allowed for the current user.
-    // Check allow-ability of state change if user is not superuser (might be cron).
-    if (($user->uid != 1) && !$force) {
-      if (!workflow_transition_allowed($transition->tid, array_merge(array_keys($user->roles), array('author')))) {
-        watchdog('workflow', 'User %user not allowed to go from state %old to %new', $args, WATCHDOG_NOTICE);
+    if ($state_changed) {
+      $args = array(
+        '%user' => $user->name,
+        '%old' => $old_sid,
+        '%new' => $new_sid,
+      );
+      $transition = workflow_get_workflow_transitions_by_sid_target_sid($old_sid, $new_sid);
+      if (!$transition && !$force) {
+        watchdog('workflow', 'Attempt to go to nonexistent transition (from %old to %new)', $args, WATCHDOG_ERROR);
         return $old_sid;
+      }
+
+      // Check allow-ability of state change if user is not superuser (might be cron).
+      if (($user->uid != 1) && !$force) {
+        if (!workflow_transition_allowed($transition->tid, array_merge(array_keys($user->roles), array('author')))) {
+          watchdog('workflow', 'User %user not allowed to go from state %old to %new', $args, WATCHDOG_NOTICE);
+          return $old_sid;
+        }
       }
     }
 
     // Invoke a callback indicating a transition is about to occur.
     // Modules may veto the transition by returning FALSE.
     $result = module_invoke_all('workflow', 'transition pre', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
-
     // Stop if a module says so.
     if (in_array(FALSE, $result)) {
       watchdog('workflow', 'Transition vetoed by module.');
       return $old_sid;
     }
 
-    // Log the new state in {workflow_node_history}.
-    // This is only valid for Node API.
-    if (!$field_name) {
-      // If the node does not have an existing 'workflow' property, save the $old_sid there, so it can be logged.
-      if (!isset($entity->workflow)) {
-        $entity->workflow = $old_sid;
+    if ($state_changed) {
+      // Log the new state in {workflow_node_history}.
+      // This is only valid for Node API.
+      if (!$field_name) {
+        // If the node does not have an existing 'workflow' property, save the $old_sid there, so it can be logged.
+        if (!isset($entity->workflow)) {
+          $entity->workflow = $old_sid;
+        }
+
+        // Change the state for {workflow_node}.
+        // The equivalent for Field API is in WorkflowDefaultWidget::submit. 
+        $data = array(
+          'nid' => $entity_id,
+          'sid' => $new_sid,
+          'uid' => (isset($entity->workflow_uid) ? $entity->workflow_uid : $user->uid),
+          'stamp' => REQUEST_TIME,
+        );
+        workflow_update_workflow_node($data);
+
+        $entity->workflow = $new_sid;
       }
-
-      // Change the state for {workflow_node}.
-      // The equivalent for Field API is in WorkflowDefaultWidget::submit. 
-      $data = array(
-        'nid' => $entity_id,
-        'sid' => $new_sid,
-        'uid' => (isset($entity->workflow_uid) ? $entity->workflow_uid : $user->uid),
-        'stamp' => REQUEST_TIME,
-      );
-      workflow_update_workflow_node($data);
-
-      $entity->workflow = $new_sid;
     }
 
     // Log the transition in {workflow_node_history}.
@@ -325,7 +317,7 @@ class WorkflowTransition {
     $this->save();
 
     // Register state change with watchdog.
-    if ($state = WorkflowState::load($new_sid)) {
+    if ($state_changed && $state = WorkflowState::load($new_sid)) {
       $workflow = $state->getWorkflow();
       if (!empty($workflow->options['watchdog_log'])) {
         $entity_type_info = entity_get_info($entity_type);
@@ -341,8 +333,20 @@ class WorkflowTransition {
     }
 
     // Notify modules that transition has occurred.
-    // Action triggers should take place in response to this callback, not the previous one.
-    module_invoke_all('workflow', 'transition post', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
+    // Action triggers should take place in response to this callback, not the 'transaction pre'.
+    if (!$field_name) { // @todo D8: remove; this is only for Node API.
+      unset($entity->workflow_comment);
+      $result = module_invoke_all('workflow', 'transition post', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
+    }
+    else {
+      // @todo: we have a problem here, when using Rules, etc: The entity
+      // is not saved here, but only after this call. Alternatives: 
+      // 1. Save the field here explicitely, using field_attach_save;
+      // 2. Move the invoke to another place (but there is no entity_postsave());
+      // 3. Emulate the new Entity.
+      // 4. Something else.
+      $result = module_invoke_all('workflow', 'transition post', $old_sid, $new_sid, $entity, $force, $entity_type, $field_name);
+    }
 
     // Clear any references in the scheduled listing.
     foreach (WorkflowScheduledTransition::load($entity_type, $entity_id, $field_name) as $scheduled_transition) {
